push latest update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mywatchlistdb?useSSL=fals
 spring.datasource.username=mywatchlistdb
 spring.datasource.password=mywatchlistdb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.ddl-auto=create
+spring.datasource.ddl-auto=update
 spring.jpa.generate-ddl = true
 spring.datasource.driverClassName=org.postgresql.Driver
 
